using System;
using System.Globalization;
using System.Windows.Data;

namespace JoinUp
{
    public class AttendanceConverter : IValueConverter
    {
        public object Convert(object value, Type targetType, object parameter, CultureInfo culture)
        {
            if (value is bool attendance)
            {
                return attendance ? "✅" : "❌";
            }
            return "❓";
        }

        public object ConvertBack(object value, Type targetType, object parameter, CultureInfo culture)
        {
            throw new NotImplementedException();
        }
    }
}
